--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cli": "^2.2.0",
-    "gulp-cssnano": "^2.1.3",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-util": "^3.0.8",
